Update predictions algorithm